Fixed word list overflow. Enabled dragging on desktop.

--- a/client/src/components/translation-selector/selection-line.scss
+++ b/client/src/components/translation-selector/selection-line.scss
@@ -1,10 +1,12 @@
 :host {
   display: block;
-  width: 1px;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
+  width: 100%;
 
   hr {
+    width: 1px;
     background-color: white;
     border-style: none;
     transform: rotate(0deg);
